--- a/dapp/package.json
+++ b/dapp/package.json
@@ -21,6 +21,8 @@
     "react-router-dom": "^6.6.1",
     "react-router-link": "^2.0.2",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.8.0",
+    "tsparticles": "^2.8.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.0"
   },
