--- a/dapp/package.json
+++ b/dapp/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "big-js": "^3.1.3",
     "ethers": "^5.7.2",
     "fs": "0.0.1-security",
     "inspector": "^0.5.0",
