--- a/dapp/package.json
+++ b/dapp/package.json
@@ -20,7 +20,9 @@
     "ipfs-mini": "^1.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.6.1",
+    "react-router-hash-link": "^2.4.3",
     "react-router-link": "^2.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
